<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <RelativeLayout
      android:id="@+id/keyed_card_details_relative_layout"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginBottom="16dp"
      android:layout_weight="7"
      android:background="@color/white"
      android:gravity="center_horizontal"
      >

    <RelativeLayout
        android:id="@+id/card_details_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        >

      <LinearLayout
          android:id="@+id/card_number_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_credit_card_grey600_36dp"
            android:tint="@color/background_light_blue"
            />
        <EditText
            android:id="@+id/card_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusDown="@+id/date_month_view"
            android:textSize="26sp"
            />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/date_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/card_number_layout"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_today_grey600_36dp"
            android:tint="@color/background_light_blue"
            />

        <EditText
            android:id="@+id/date_month_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/month"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:nextFocusDown="@+id/date_year_view"
            android:textSize="32sp"
            />

        <EditText
            android:id="@+id/date_year_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/year"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="2"
            android:nextFocusDown="@+id/security_code_view"
            android:textSize="32sp"
            />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/security_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/date_layout"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_lock_outline_grey600_36dp"
            android:tint="@color/background_light_blue"
            />

        <EditText
            android:id="@+id/security_code_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cvv"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="3"
            android:nextFocusDown="@+id/zip_code_view"
            android:textSize="32sp"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/security_layout"
          android:layout_marginTop="20dp"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >

        <Button
            android:id="@+id/button_checkout_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/visa_action_golden"
            android:text="@string/button_text_token"
            android:textColor="@color/white"
            android:imeOptions="actionDone"
            android:textSize="22sp"
            />
      </LinearLayout>

    </RelativeLayout>

  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/response_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:background="@color/white"
      android:padding="10dp"
      android:visibility="gone"
      >

    <TextView
        android:id="@+id/encrypted_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/encrypted_data_title"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/very_lighter_gray"
        />

    <TextView
        android:id="@+id/encrypted_data_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/divider"
        />

  </RelativeLayout>

</LinearLayout>
