<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) Google

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <FrameLayout
      android:id="@+id/layout_container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


      <LinearLayout
          android:id="@+id/checkout_cart_detail_fragment"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="@dimen/padding_large"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/margin_small"
              android:text="@string/item_name"
              />

          <TextView
              android:id="@+id/item_name_checkout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:textStyle="bold"
              />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginRight="@dimen/margin_small"
              android:text="@string/item_price"
              />

          <TextView
              android:id="@+id/item_price_checkout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:textStyle="bold"
              />
        </LinearLayout>
      </LinearLayout>

      <include layout="@layout/horizontal_divider"/>

      <!--
          This FrameLayout is a placeholder for the Pay with Google button and will be provided
          by a fragment at runtime.
      -->
      <FrameLayout
          android:id="@+id/dynamic_wallet_button_fragment"
          android:layout_width="@dimen/buy_button_width"
          android:layout_height="@dimen/buy_button_height"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="@dimen/margin_large"
          android:layout_marginTop="@dimen/margin_xlarge"
          android:visibility="gone"
          />


      <LinearLayout
          android:id="@+id/not_ready_to_pay"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_large"
          android:layout_marginTop="@dimen/margin_xlarge"
          android:orientation="vertical"
          android:padding="10dp"
          android:visibility="gone"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/pay_not_ready"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/set_it_up"
            android:textSize="12sp"
            android:textStyle="italic"
            />
      </LinearLayout>

      <Button
          android:id="@+id/button_regular_checkout"
          android:layout_width="@dimen/buy_button_width"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="@dimen/padding_large"
          android:text="Continue Checkout"
          />

    </LinearLayout>
  </FrameLayout>

</ScrollView>