<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) Google

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_xlarge"
            android:text="@string/thanks_for_your_order"
            style="@android:style/TextAppearance.Large"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_large"
            android:text="@string/secured_by"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="@dimen/padding_xlarge"
            android:src="@drawable/android_pay_acc_mark_rgb_fc_dark"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/response_layout"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/encrypted_data_title"
                android:text="AndroidPay Blob:"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/divider"
                android:layout_below="@+id/encrypted_data_title"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/very_lighter_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/encrypted_data_view_android_pay"
                android:textIsSelectable="true"
                android:layout_below="@+id/divider"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/encrypted_data_title2"
                android:text="Sec Service Blob:"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/divider2"
                android:layout_below="@+id/encrypted_data_title2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/very_lighter_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/encrypted_data_view_sec"
                android:textIsSelectable="true"
                android:layout_below="@+id/divider2"/>

        </RelativeLayout>

        <Button
            android:id="@+id/button_continue_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_shopping"
            android:layout_marginBottom="@dimen/padding_large" />

    </LinearLayout>

</ScrollView>
